--- a/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
@@ -1,65 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <meta charset="UTF-8">
-    <title>Online Courses</title>
-</head>
-<body>
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Online Course</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+{% extends "onlinecourse/base.html" %} 
+{% load static %}
+{% block nav-ibm %}<li class="nav-link active" ><a href="{% url 'onlinecourse:index' %}" title="Index">Index</a></li>{% endblock %}
 
-    <!-- Page content -->
+{% block content %}
     {% if course_list %}
-        <div class="container">
-            <div class="card-deck">
-                {% for course in course_list %}
-                         <div class="card" style="width: 36rem;">
-                          <img class="card-img-left" src="{{MEDIA_URL}}/{{ course.image }}" width="240px" height="240px"
-                               alt="Course image">
-                          <div class="card-body bg-light">
-                              <h5 class="card-title">{{ course.name }}, <span class="text-success">
-                                  {{ course.total_enrollment}} enrolled</span></h5>
-                            <p class="card-text">{{ course.description}}</p>
-                            <form action="{% url 'onlinecourse:enroll' course.id %}" method="post">
-                                  {% csrf_token %}
-                                  <input class="btn btn-primary"  type="submit"
-                                         value="{% if course.is_enrolled %}Enter{% else %}Enroll{% endif %} ">
-                            </form>
-                          </div>
-                        </div>
-                {% endfor %}
+        <div class="card-deck">
+        {% for course in course_list %}
+            <div class="card" style="width: 36rem;">
+                <img class="card-img-left" src="{{ course.image.url }}" alt="{{ course.name }}">
+                <div class="card-body bg-light">
+                    <h5 class="card-title">
+                        <a href="{% url 'onlinecourse:course_details' course.pk %}">{{ course.name }}</a>, 
+                        <span class="text-success">{{ course.enrollment_set.count}} enrolled </span>
+                    </h5>
+                    <p class="card-text">{{ course.description}}</p>
+                    {% if request.user.is_authenticated %}
+                    <form action="{% url 'onlinecourse:enroll' course.id %}" method="post">
+                        {% csrf_token %}
+                        <input class="btn btn-primary"  type="submit" value="{% if course.is_enrolled %} Enter {% else %} Enroll {% endif %} ">
+                    </form>
+                    {% else %}
+                        <a class="btn btn-primary" href="{% url 'onlinecourse:login' %}" title="Login">Login to enroll</a>
+                    {% endif %}
+                </div>
             </div>
+        {% endfor %}
         </div>
     {% else %}
         <p>No courses are available.</p>
     {% endif %}
-</body>
-</html>
+{% endblock content %}
+
