--- a/onlinecourse/templates/onlinecourse/user_login_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/user_login_bootstrap.html
@@ -1,43 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+{% extends "onlinecourse/base.html" %} 
+{% load static %}
 
-<!-- Navigation bar -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'onlinecourse:index' %}">Home</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+{% block content %}
 
     <!-- Stylize Login form -->
-    <form action="{% url 'onlinecourse:login' %}" method="post">
+    <form action="{% url 'onlinecourse:login' %}?next={{ request.path }}" method="post">
         {% csrf_token %}
         <div class="container"> <!--Style root div with .container class -->
             <h1>Login</h1>
@@ -56,4 +23,5 @@
         </div>
     </form>
 
-</body>
+</div>
+{% endblock content %}
