--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -15,36 +15,38 @@
             </div>
         </div>
         {% endfor %}
-        <div class="d-grid gap-2">
-            <a class="btn btn-warning" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                Take a Quiz
-            </a>
-        </div>
-        <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-                <form id="questionform" action="{% url 'onlinecourse:submit' course.pk %}" method="post">
-                {% csrf_token %}
-                {% for question in course.question_set.all %}
-                    <div class="card-header"><h5>{{ question.text }}</h5></div>
-                        <div class="form-group">
-                        {% for choice in question.choice_set.all %}
-                                    <div class="form-check">
-                                        <label class="form-check-label">
-                                            <input type="checkbox" name="choice_{{choice.id}}"
-                                                class="form-check-input" id="{{choice.id}}"
-                                                value="{{choice.id}}">{{ choice.text }}
-                                        </label>
-                                    </div>
-                        {% endfor %}
-                        </div>
-                {% endfor %}
-                <br>
-                <div class="d-grid gap-2">
-                    <input class="btn btn-primary" type="submit" value="Submit">
-                </div>
-                </form>
+        {% if course.question_set.all %}
+            <div class="d-grid gap-2">
+                <a class="btn btn-warning" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    Take a Quiz
+                </a>
             </div>
-        </div>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    <form id="questionform" action="{% url 'onlinecourse:submit' course.pk %}" method="post">
+                    {% csrf_token %}
+                    {% for question in course.question_set.all %}
+                        <div class="card-header"><h5>{{ question.text }}</h5></div>
+                            <div class="form-group">
+                            {% for choice in question.choice_set.all %}
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" name="choice_{{choice.id}}"
+                                                    class="form-check-input" id="{{choice.id}}"
+                                                    value="{{choice.id}}">{{ choice.text }}
+                                            </label>
+                                        </div>
+                            {% endfor %}
+                            </div>
+                    {% endfor %}
+                    <br>
+                    <div class="d-grid gap-2">
+                        <input class="btn btn-primary" type="submit" value="Submit">
+                    </div>
+                    </form>
+                </div>
+            </div>
+        {% endif %}
     {% elif request.user.is_authenticated %}
     <form action="{% url 'onlinecourse:enroll' course.id %}" method="post">
         {% csrf_token %}
