--- a/onlinecourse/templates/onlinecourse/base.html
+++ b/onlinecourse/templates/onlinecourse/base.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>{% block title %} default {% endblock title %}</title>
+    <title>{% block title %} IBM Final Lab {% endblock title %}</title>
   {% endblock head %}
   </head>
   <body>
