--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -1,6 +1,6 @@
 {% extends "onlinecourse/base.html" %} 
 {% load static %}
-
+<title>{% block title %} {{ course.name }} {% endblock title %}</title>
 {% block content %}
     <img class="card-img-left" src="{{ course.image.url }}" alt="{{ course.name }}">
     <h2>{{ course.name }}</h2>
